[gd_scene load_steps=12 format=3 uid="uid://b2qmncwrxdeer"]

[ext_resource type="Script" path="res://systems/ui/tooltips/tooltip_basic.gd" id="1_titoy"]
[ext_resource type="Shader" path="res://shaders/invert.gdshader" id="2_lvrvg"]
[ext_resource type="Texture2D" uid="uid://cd5umbahmjlju" path="res://assets/sprites/cards/sigils.png" id="3_pr56c"]
[ext_resource type="Shader" path="res://shaders/blob_background.gdshader" id="4_oor7w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf6co"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pii2q"]
bg_color = Color(0, 0, 0, 0.709804)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_avj3n"]
shader = ExtResource("2_lvrvg")

[sub_resource type="AtlasTexture" id="AtlasTexture_ljn2j"]
atlas = ExtResource("3_pr56c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ffgt3"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_fov2i"]
seamless = true
noise = SubResource("FastNoiseLite_ffgt3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a4pvg"]
shader = ExtResource("4_oor7w")
shader_parameter/strength = 2.3
shader_parameter/noise = SubResource("NoiseTexture2D_fov2i")

[node name="TooltipBase" type="MarginContainer"]
z_index = 10
z_as_relative = false
custom_minimum_size = Vector2(300, 25)
offset_right = 300.0
offset_bottom = 25.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_titoy")

[node name="TooltipBackground" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qf6co")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipBackground"]
layout_mode = 2

[node name="TooltipTitleBg" type="PanelContainer" parent="TooltipBackground/VBoxContainer"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pii2q")

[node name="MarginContainer" type="MarginContainer" parent="TooltipBackground/VBoxContainer/TooltipTitleBg"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 4

[node name="HFlowContainer" type="HFlowContainer" parent="TooltipBackground/VBoxContainer/TooltipTitleBg/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 12

[node name="TooltipIcon" type="TextureRect" parent="TooltipBackground/VBoxContainer/TooltipTitleBg/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_avj3n")
layout_mode = 2
texture = SubResource("AtlasTexture_ljn2j")
expand_mode = 2

[node name="TooltipTitle" type="Label" parent="TooltipBackground/VBoxContainer/TooltipTitleBg/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Split-Strike"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TooltipBackground/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TooltipText" type="Label" parent="TooltipBackground/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cards with this symbol will only
attack cards diagonally."

[node name="Control" type="Control" parent="."]
show_behind_parent = true
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
show_behind_parent = true
material = SubResource("ShaderMaterial_a4pvg")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.270588, 1)
